force-app/main/default/objects/Tool_Exchange__c/Tool_Exchange__c.object-meta.xml
<CustomObject>
    <label>Tool Exchange</label>
    <nameField>
        <displayFormat>TE-{0}</displayFormat>
        <label>Tool Exchange Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tool Exchanges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>