force-app/main/default/objects/Tool_Exchange__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tool_Exchanges</relationshipName>
    <type>Lookup</type>
</CustomField>