force-app/main/default/objects/Tool_Exchange__c/fields/Exchanged_Cash_Value_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Exchanged_Cash_Value_Per_Unit__c</fullName>
    <label>Exchanged Cash Value Per Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>