force-app/main/default/objects/Tool_Exchange__c/fields/New_ToolBank_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_ToolBank_Owner__c</fullName>
    <formula>CreatedBy.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New ToolBank Owner</label>
    <type>Text</type>
</CustomField>