force-app/main/default/objects/Tool_Exchange__c/fields/Not_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Not_Shipped__c</fullName>
    <label>Transit Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Approval_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Shipped</fullName>
                <default>true</default>
                <label>Not Shipped</label>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>