force-app/main/default/objects/Tool_Exchange__c/fields/Original_Cash_Value_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Original_Cash_Value_Per_Unit__c</fullName>
    <formula>Tool_Exchanged__r.Cash_Value_Per_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Cash Value Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>