force-app/main/default/objects/Tool_Exchange__c/fields/Original_ToolBank_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_ToolBank_Owner__c</fullName>
    <formula>Tool_Exchanged__r.Owner:User.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original ToolBank Owner</label>
    <type>Text</type>
</CustomField>