force-app/main/default/objects/Tool_Exchange__c/fields/Proposed_Tool_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Tool_Exchange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Tool Exchange</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Tool_Market__c.OwnerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tool_Market__c</referenceTo>
    <relationshipLabel>Tool Exchanges (Proposed Tool Exchange)</relationshipLabel>
    <relationshipName>Tool_Exchanges1</relationshipName>
    <type>Lookup</type>
</CustomField>