force-app/main/default/objects/Tool_Exchange__c/fields/Quantity_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Exchange__c</fullName>
    <inlineHelpText>How many of your tools are you willing to exchange for this tool?</inlineHelpText>
    <label>Quantity Exchange</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>