force-app/main/default/objects/Tool_Exchange__c/fields/Shipping_Covered__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Covered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if shipping is being covered by the original ToolBank owner or a third party member.</inlineHelpText>
    <label>Shipping Covered?</label>
    <type>Checkbox</type>
</CustomField>