force-app/main/default/objects/Tool_Exchange__c/fields/Tool_Exchanged__c.field-meta.xml
<CustomField>
    <fullName>Tool_Exchanged__c</fullName>
    <label>Tool Exchanged</label>
    <referenceTo>Tool_Market__c</referenceTo>
    <relationshipLabel>Tool Exchanges</relationshipLabel>
    <relationshipName>Tool_Exchanges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>