force-app/main/default/objects/Tool_Exchange__c/fields/Total_Cash_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Cash_Value__c</fullName>
    <formula>Exchanged_Cash_Value_Per_Unit__c  * Quantity_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cash Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>