force-app/main/default/objects/Tool_Exchange__c/fields/Total_Quantity_for_Proposed_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_for_Proposed_Exchange__c</fullName>
    <formula>Proposed_Tool_Exchange__r.Quantity__c  -  Quantity_Exchange__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Quantity for Proposed Exchange</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>