force-app/main/default/objects/Tool_Exchange__c/fields/Who_s_Covering_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Who_s_Covering_Shipping__c</fullName>
    <label>Who&apos;s Covering Shipping?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Shipping_Covered__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original Affiliate Owner</fullName>
            </value>
            <value>
                <fullName>ToolBank USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>