force-app/main/default/objects/Tool_Exchange__c/recordTypes/Cash_Barter.recordType-meta.xml
<RecordType>
    <fullName>Cash_Barter</fullName>
    <active>true</active>
    <description>You are claiming these tools through a cash barter.</description>
    <label>Cash Barter</label>
</RecordType>