force-app/main/default/objects/Tool_Exchange__c/recordTypes/Give_Away.recordType-meta.xml
<RecordType>
    <fullName>Give_Away</fullName>
    <active>true</active>
    <description>The tools you are claiming are being given to you.</description>
    <label>Give Away</label>
</RecordType>