force-app/main/default/objects/Tool_Exchange__c/recordTypes/Tool_Barter.recordType-meta.xml
<RecordType>
    <fullName>Tool_Barter</fullName>
    <active>true</active>
    <description>You are claiming these tools through tool-for-tool barter.</description>
    <label>Tool Barter</label>
</RecordType>