force-app/main/default/objects/Tool_Exchange__c/validationRules/Total_Value_Greater_Than_AVAIL_ToolBucks.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Value_Greater_Than_AVAIL_ToolBucks</fullName>
    <active>false</active>
    <description>This ensures that users can&apos;t create TE records if the Total ToolBucks Value is greater than their available ToolBucks.</description>
    <errorConditionFormula>Total_ToolBucks_Value__c  &gt;  $User.00N4R00000G3Xpc</errorConditionFormula>
    <errorMessage>The value of this exchange is greater than what you have available to spend.  Try reducing the quantity requested.</errorMessage>
</ValidationRule>