force-app/main/default/objects/Tool_Exchange__c/listViews/My_Tool_Exchanges.listView-meta.xml
<ListView>
    <fullName>My_Tool_Exchanges</fullName>
    <columns>NAME</columns>
    <columns>Tool_Exchanged__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Shipping_Covered__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Tool Exchanges</label>
</ListView>